Fix SpecBox collapse bug + better scrolling

--- a/jsdebug/web/src/components/App.css
+++ b/jsdebug/web/src/components/App.css
@@ -27,4 +27,13 @@
 .app-algo {
     white-space: pre-wrap;
     overflow-y: auto;
+
+    /* fill remaining space */
+    flex: 1 0 1px;
+}
+
+.app-debug-session {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 1px;
 }
